New Go solutions. The configuration for Rust solutions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,8 @@ name = "project-euler"
 version = "0.1.0"
 authors = ["redtankd <redtankd@qq.com>"]
 
+[lib]
+path = "src/lib/lib.rs"
+
 [dependencies]
 time = "^0.1"
