--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,41 @@
+sudo: false
+
 language: rust
+
+rust:
+  - stable
+  # - beta
+  # - nightly
+
+env:
+  global:
+    - LOCAL="~/.local"  # install here to avoid `sudo`
+  matrix:
+    - TEST_DIR="."
+      PKGNAME="project-euler"    # must match with cargo.toml
+
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - libbfd-dev    # required for `--verify`
+
+before_script: |
+  export PATH=$LOCAL/bin:$PATH 
+  cd $TEST_DIR
+
+after_success: |
+  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz && 
+    tar xzf master.tar.gz && 
+    mkdir kcov-master/build && 
+    cd kcov-master/build && 
+    cmake -DCMAKE_INSTALL_PREFIX:PATH=$LOCAL .. && 
+    make && 
+    make install && 
+    cd ../.. && 
+    kcov --verify \
+        --coveralls-id=$TRAVIS_JOB_ID \
+        --exclude-pattern=/.cargo \
+        target/kcov target/debug/0????-*
