Add a badge for coverall. A test for kcov

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,8 @@ after_success: |
     kcov --verify \
         --coveralls-id=$TRAVIS_JOB_ID \
         --exclude-pattern=/.cargo \
-        target/kcov target/debug/0????-*
+        target/kcov target/debug/00024-* &&
+    kcov --verify \
+        --coveralls-id=$TRAVIS_JOB_ID \
+        --exclude-pattern=/.cargo \
+        target/kcov target/debug/00025-* 
