Refactor project's layout. Finish CI for Rust solutions

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,4 @@ after_success: |
     make && 
     make install && 
     cd ../.. && 
-    kcov --verify \
-        --coveralls-id=$TRAVIS_JOB_ID \
-        --exclude-pattern=/.cargo \
-        target/kcov target/debug/00024-* &&
-    kcov --verify \
-        --coveralls-id=$TRAVIS_JOB_ID \
-        --exclude-pattern=/.cargo \
-        target/kcov target/debug/00025-* 
+    kcovrun 
