--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,6 @@ env:
   global:
     - LOCAL="~/.local"  # install kcov here to avoid `sudo`
     - RUSTFLAGS='-C link-dead-code' # for code coverage analysis, because rustc strip dead code
-  matrix:
-    - TEST_DIR="."
-      PKGNAME="project-euler"    # must match with cargo.toml
 
 addons:
   apt:
@@ -21,19 +18,33 @@ addons:
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
-      - libbfd-dev    # required for `--verify`
+      - binutils-dev
+      #- libiberty-dev # <- no such thing in Ubuntu 12.04
+      - g++
 
-before_script: |
-  export PATH=$LOCAL/bin:$PATH 
-  cd $TEST_DIR
+install:
+    - export PATH=$HOME/.local/bin:$HOME/.cargo/bin:$PATH
+    - mkdir -p ~/.cargo/bin
+    - mkdir -p ~/.local/bin
+
+    # 1. Install kcov v33.
+    - export KCOV_VERSION=33
+    - |
+        wget https://github.com/SimonKagstrom/kcov/archive/v${KCOV_VERSION}.tar.gz &&
+        tar xzf v${KCOV_VERSION}.tar.gz &&
+        cd kcov-${KCOV_VERSION} &&
+        mkdir build &&
+        cd build &&
+        cmake .. &&
+        make &&
+        cp src/kcov src/libkcov_sowrapper.so ~/.cargo/bin &&
+        cd ../..
+    - kcov --version
+
+    # 2. Install cargo-kcov.
+    - cargo install cargo-kcov
 
 after_success: |
-  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz && 
-    tar xzf master.tar.gz && 
-    mkdir kcov-master/build && 
-    cd kcov-master/build && 
-    cmake -DCMAKE_INSTALL_PREFIX:PATH=$LOCAL .. && 
-    make && 
-    make install && 
-    cd ../.. && 
-    src/kcovrun 
+  cargo kcov --verbose -- --verify --coveralls-id=$TRAVIS_JOB_ID \
+    --strip-path=$TRAVIS_BUILD_DIR \
+    --exclude-pattern=/.cargo,target 
