--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ addons:
       - libelf-dev
       - libdw-dev
       - binutils-dev
+      - libbfd-dev
       #- libiberty-dev # <- no such thing in Ubuntu 12.04
       - g++
 
