--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "project-euler"
 version = "0.1.0"
 authors = ["redtankd <redtankd@qq.com>"]
+build = "build.rs"
 
 [lib]
 path = "src/lib/lib.rs"
@@ -9,3 +10,9 @@ path = "src/lib/lib.rs"
 [dependencies]
 time = "^0.1"
 itertools = "^0.7.7"
+
+[build-dependencies]
+rustc_version = "0.2"
+
+[features]
+nightly = []
