--- a/.travis.yml
+++ b/.travis.yml
@@ -2,38 +2,46 @@ sudo: false
 
 language: rust
 
-rust:
-  # - stable
-  # - beta
-  - nightly
+cache: cargo
 
 env:
   global:
-    - LOCAL="~/.local"  # install kcov here to avoid `sudo`
-    - RUSTFLAGS='-C link-dead-code' # for code coverage analysis, because rustc strip dead code
-  matrix:
-    - TEST_DIR="."
-      PKGNAME="project-euler"    # must match with cargo.toml
+    # install here to avoid `sudo`
+    - PATH=$HOME/.local/bin:$HOME/.cargo/bin:$PATH
+
+jobs:
+  include:
+    - rust: nightly
+      env: 
+        - CARGO_INCREMENTAL=0
+        - RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zno-landing-pads"
 
 addons:
   apt:
     packages:
-      - libcurl4-openssl-dev
-      - libelf-dev
-      - libdw-dev
-      - libbfd-dev    # required for `--verify`
 
-before_script: |
-  export PATH=$LOCAL/bin:$PATH 
-  cd $TEST_DIR
+install:
+  - mkdir -p $HOME/.local/bin
+  - mkdir -p $HOME/.cargo/bin
 
-after_success: |
-  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz && 
-    tar xzf master.tar.gz && 
-    mkdir kcov-master/build && 
-    cd kcov-master/build && 
-    cmake -DCMAKE_INSTALL_PREFIX:PATH=$LOCAL .. && 
-    make && 
-    make install && 
-    cd ../.. && 
-    src/kcovrun 
+before_script: 
+
+script:
+  - cargo build --verbose
+  - cargo test --all --verbose
+
+after_success:
+  - |
+    if [ "$TRAVIS_RUST_VERSION" = "nightly" ]; then
+
+      curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-linux-x86_64.tar.bz2 | tar jxf -;
+
+      ./grcov . -s . -t coveralls+  --ignore "$HOME/.cargo/*" --ignore-not-existing \
+        --commit-sha $TRAVIS_COMMIT \
+        --service-name travis-ci \
+        --service-number $TRAVIS_BUILD_NUMBER \
+        --service-job-number $TRAVIS_JOB_NUMBER \
+        --token $COVERALLS_REPO_TOKEN > coveralls.json;
+
+      curl "https://coveralls.io/api/v1/jobs" -F json_file=@coveralls.json;
+    fi
