--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,28 @@
+# the default dist doesn't support grcov, so ubuntu 20.4 is used.
+dist: focal
+
 language: rust
 
 cache: cargo
 
 env:
   global:
-    # install here to avoid `sudo`
+    # apps deployed here to avoid `sudo`
     - PATH=$HOME/.local/bin:$HOME/.cargo/bin:$PATH
 
 jobs:
   include:
     - rust: nightly
       env: 
-        - CARGO_INCREMENTAL=0
-        - RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests"
+        - CARGO_INCREMENTAL = "0"
+        - RUSTFLAGS = "-Zinstrument-coverage -Zprofile -Zpanic_abort_tests -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off"
+        - RUSTDOCFLAGS = "-Cpanic=abort"
 
-addons:
-  apt:
-    packages:
-
-install:
+before_install:
   - mkdir -p $HOME/.local/bin
   - mkdir -p $HOME/.cargo/bin
 
+install:
   - cargo install grcov
 
 before_script: 
