source-based coverage has been stabilized in rust 1.60

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,8 @@ jobs:
     - rust: nightly
       env:
         # source-based coverage
-        - RUSTFLAGS="-Zinstrument-coverage"
+        - RUSTFLAGS="-Cinstrument-coverage"
         - LLVM_PROFILE_FILE="coverage-%p-%m.profraw"
-        # .gcda profile
-        # - CARGO_INCREMENTAL="0"
-        # - RUSTFLAGS="-Zinstrument-coverage -Zprofile -Zpanic_abort_tests -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off"
-        # - RUSTDOCFLAGS="-Cpanic=abort"
 
 cache: cargo
 
